react-app/src/components/MainContent/Home/Home.css
.payments-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.payments {
  height: 12vh;
  width: 200%;
  padding: 50px;
  border-bottom: 1px solid #7f7f7fa7;
}

.sender-receiver {
  font-weight: 400;
  font-size: 18px;
  display: flex;
  width: 30vh;
  font-family: "Scto Grotesk A","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin-right: 0px;
}

.paid {
  font-weight: 200;
  padding-left: 5px;
  padding-right: 5px;
}

.amount {
  display: flex;
  align-items: flex-end;
}

.fa-comment:before {
  font-size: 20px;
  text-decoration: none;
}

.black {
  color: #2F3033;
}

.blue {
  color: #0074de;
  padding-top: 8px;
}

.red {
  color: #e63b69;
  padding-top: 8px;
}

.comment-icon {
  padding-top: 15px;
  display: flex;
  flex-direction: row;
}

.num {
  color: #0074de;
}

.numred {
  color: #e63b69;
}

.num:hover {
  cursor: pointer;
  color: #3b91cb;
  border: #3b91cb;
}

.fa-comment{
  height: 30px;
  width: 30px;
}

.fa-heart {
  height: 30px;
  width: 30px;
}

.payment-title {
  padding-top: 20px;
  font-size: 30px;
}

.all-content {
  display: grid;
  grid-template-columns: 2.5fr 0.35fr;
  font-family: "Scto Grotesk A","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.red {
  color: red;
}

.green {
  color: green;
}

.date {
  font-size: 12px;
  font-family: "Scto Grotesk A","Helvetica Neue",Helvetica,Arial,sans-serif;
  padding-top: 3px;
}

.comment-length {
  display: flex;
  flex-direction: row;
  align-content: space-between;
  font-family: "Scto Grotesk A","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
}

.comment-link {
  text-decoration: none;
  display: flex;
  align-self: center;
}

